[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.16", features = ["derive"] }
flate2 = "1.0.33"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
